fixed sidebar overflow in CSS

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1934,9 +1934,11 @@
 
 	.sideoverlay {
 		position: absolute;
-		top: 150px;
+		overflow-y: scroll;
+		top: 200px;
 		right: 60px;
 		width: 600px;
+		height: 500px;
 	}
 
 	.dropotron {
